--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Giriş</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
@@ -13,7 +13,9 @@
       max-width: 900px;
       margin: auto;
     }
-    input, textarea, button {
+    input,
+    textarea,
+    button {
       width: 100%;
       padding: 12px;
       margin: 8px 0;
@@ -34,7 +36,8 @@
       margin-top: 20px;
       border-collapse: collapse;
     }
-    th, td {
+    th,
+    td {
       padding: 10px;
       border: 1px solid #ccc;
       font-size: 15px;
@@ -50,28 +53,35 @@
       border: none;
       border-radius: 4px;
     }
-    #ana-icerik { display: none; }
+    #ana-icerik {
+      display: none;
+    }
   </style>
 </head>
 <body>
   <div id="giris">
     <h2>🔐 Giriş</h2>
-    <input type="password" id="sifre" placeholder="Şifre giriniz">
+    <input type="password" id="sifre" placeholder="Şifre giriniz" />
     <button onclick="kontrolEt()">Giriş Yap</button>
     <p id="uyari"></p>
   </div>
 
   <div id="ana-icerik">
     <h2>Kara Listeye Kişi Ekle</h2>
-    <input type="text" id="isim" placeholder="İsim">
-    <input type="text" id="tc" placeholder="TC Kimlik No" maxlength="11">
-    <input type="text" id="telefon" placeholder="Telefon">
+    <input type="text" id="isim" placeholder="İsim" />
+    <input type="text" id="tc" placeholder="TC Kimlik No" maxlength="11" />
+    <input type="text" id="telefon" placeholder="Telefon" />
     <textarea id="neden" placeholder="Neden kara listeye alındı?"></textarea>
     <button onclick="ekle()">Ekle</button>
     <p id="sonuc"></p>
 
     <h2>Liste</h2>
-    <input type="text" id="arama" placeholder="İsim, TC veya neden ara..." onkeyup="filtrele()">
+    <input
+      type="text"
+      id="arama"
+      placeholder="İsim, TC veya neden ara..."
+      onkeyup="filtrele()"
+    />
     <table id="listeTablosu">
       <thead>
         <tr>
@@ -101,35 +111,156 @@
     </table>
   </div>
 
-<script>
-  const sifreDogru = "12345";
+  <script>
+    const sifreDogru = "12345";
 
-  function kontrolEt() {
-    const girilen = document.getElementById('sifre').value;
-    if (girilen === sifreDogru) {
-      localStorage.setItem('giris_onay', Date.now());
-      setTimeout(() => {
-        document.getElementById('giris').style.display = 'none';
-        document.getElementById('ana-icerik').style.display = 'block';
-        listele();
-        gecmisiYukle();
-      }, 100);
-    } else {
-      document.getElementById('uyari').innerText = "❌ Hatalı şifre!";
+    function kontrolEt() {
+      const girilen = document.getElementById("sifre").value;
+      if (girilen === sifreDogru) {
+        localStorage.setItem("giris_onay", Date.now());
+        setTimeout(() => {
+          document.getElementById("giris").style.display = "none";
+          document.getElementById("ana-icerik").style.display = "block";
+          listele();
+          gecmisiYukle();
+        }, 100);
+      } else {
+        document.getElementById("uyari").innerText = "❌ Hatalı şifre!";
+      }
     }
-  }
 
-  window.onload = function() {
-    setTimeout(() => {
-      const girisOnay = localStorage.getItem('giris_onay');
-      if (girisOnay && (Date.now() - parseInt(girisOnay) < 3600000)) {
-        document.getElementById('giris').style.display = 'none';
-        document.getElementById('ana-icerik').style.display = 'block';
+    window.onload = function () {
+      setTimeout(() => {
+        const girisOnay = localStorage.getItem("giris_onay");
+        if (girisOnay && Date.now() - parseInt(girisOnay) < 3600000) {
+          document.getElementById("giris").style.display = "none";
+          document.getElementById("ana-icerik").style.display = "block";
+          listele();
+          gecmisiYukle();
+        }
+      }, 200);
+    };
+
+    const supabase = window.supabase.createClient(
+      "https://agfeuszcreycpandzfij.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFnZmV1c3pjcmV5Y3BhbmR6ZmlqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTA2MjA3NDYsImV4cCI6MjA2NjE5Njc0Nn0.ap9UUJfPECk0Xysn53q8WIBaH1QDKMPrGTCrGzfEn_s"
+    );
+
+    let kisiler = [];
+    let gecmisKisiler = [];
+
+    async function ekle() {
+      const isim = document.getElementById("isim").value.trim();
+      const tc = document.getElementById("tc").value.trim();
+      const telefon = document.getElementById("telefon").value.trim();
+      const neden = document.getElementById("neden").value.trim();
+
+      if (!isim || !tc || !neden) {
+        document.getElementById("sonuc").innerText = "İsim, TC ve neden zorunludur.";
+        return;
+      }
+
+      if (tc.length !== 11 || isNaN(tc)) {
+        document.getElementById("sonuc").innerText =
+          "TC Kimlik No 11 haneli olmalı.";
+        return;
+      }
+
+      const { data: mevcut } = await supabase
+        .from("blacklist")
+        .select("id")
+        .eq("tc", tc);
+      if (mevcut.length > 0) {
+        document.getElementById("sonuc").innerText = "⚠️ Bu TC zaten kayıtlı.";
+        return;
+      }
+
+      const { error } = await supabase
+        .from("blacklist")
+        .insert([{ isim, tc, telefon, neden }]);
+      if (error) {
+        document.getElementById("sonuc").innerText = "Hata: " + error.message;
+      } else {
+        document.getElementById("sonuc").innerText = "✅ Kayıt eklendi.";
+        document.getElementById("isim").value = "";
+        document.getElementById("tc").value = "";
+        document.getElementById("telefon").value = "";
+        document.getElementById("neden").value = "";
         listele();
         gecmisiYukle();
       }
-    }, 200);
-  };
-</script>
+    }
+
+    async function listele() {
+      const { data } = await supabase.from("blacklist").select("*");
+      kisiler = data || [];
+      tabloyuYaz(kisiler);
+    }
+
+    async function gecmisiYukle() {
+      const { data } = await supabase.from("silinenler").select("*");
+      gecmisKisiler = data || [];
+      gecmisTabloYaz(gecmisKisiler);
+    }
+
+    function tabloyuYaz(liste) {
+      const tbody = document.querySelector("#listeTablosu tbody");
+      tbody.innerHTML = "";
+      liste.forEach((kisi) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${kisi.isim}</td>
+          <td>${kisi.tc}</td>
+          <td>${kisi.telefon}</td>
+          <td>${kisi.neden}</td>
+          <td><button class="sil-btn" onclick="sil('${kisi.id}', '${kisi.isim}', '${kisi.tc}', '${kisi.telefon}', '${kisi.neden}')">Sil</button></td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
+
+    function gecmisTabloYaz(liste) {
+      const tbody = document.querySelector("#gecmisTablosu tbody");
+      tbody.innerHTML = "";
+      liste.forEach((kisi) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${kisi.isim}</td>
+          <td>${kisi.tc}</td>
+          <td>${kisi.telefon}</td>
+          <td>${kisi.neden}</td>
+          <td>${kisi.silinme_nedeni}</td>
+          <td>${new Date(kisi.silinme_tarihi).toLocaleString()}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
+
+    async function sil(id, isim, tc, telefon, neden) {
+      const silmeNedeni = prompt("Bu kişiyi neden siliyorsun?");
+      if (!silmeNedeni || silmeNedeni.trim() === "") {
+        alert("Açıklama zorunludur.");
+        return;
+      }
+      await supabase
+        .from("silinenler")
+        .insert([{ isim, tc, telefon, neden, silinme_nedeni: silmeNedeni }]);
+      await supabase.from("blacklist").delete().eq("id", id);
+      listele();
+      gecmisiYukle();
+    }
+
+    function filtrele() {
+      const arama = document.getElementById("arama").value.toLowerCase();
+      const filtreli = kisiler.filter(
+        (k) =>
+          k.isim.toLowerCase().includes(arama) ||
+          k.tc.includes(arama) ||
+          k.neden.toLowerCase().includes(arama)
+      );
+      tabloyuYaz(filtreli);
+    }
+  </script>
 </body>
 </html>
+
