--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kara Liste</title>
+  <title>Giriş</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
@@ -13,106 +13,253 @@
       max-width: 900px;
       margin: auto;
     }
-    input, button {
-      padding: 10px;
-      margin: 10px 0;
-      font-size: 16px;
+    input,
+    textarea,
+    button {
       width: 100%;
+      padding: 12px;
+      margin: 8px 0;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+    }
+    button:hover {
+      background-color: #0056b3;
     }
     table {
       width: 100%;
+      margin-top: 20px;
       border-collapse: collapse;
-      margin-top: 10px;
-      background: white;
     }
-    th, td {
-      padding: 12px;
+    th,
+    td {
+      padding: 10px;
       border: 1px solid #ccc;
-      text-align: left;
+      font-size: 15px;
     }
     th {
+      background: #eee;
       cursor: pointer;
     }
-    tr:hover {
-      background-color: #f0f0f0;
+    .sil-btn {
+      background: #dc3545;
+      color: white;
+      padding: 6px 10px;
+      border: none;
+      border-radius: 4px;
+    }
+    #ana-icerik {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <h1>Kara Liste</h1>
+  <div id="giris">
+    <h2>🔐 Giriş</h2>
+    <input type="password" id="sifre" placeholder="Şifre giriniz" />
+    <button onclick="kontrolEt()">Giriş Yap</button>
+    <p id="uyari"></p>
+  </div>
 
-  <input type="text" id="searchBox" placeholder="TC Kimlik ile ara...">
+  <div id="ana-icerik">
+    <h2>Kara Listeye Kişi Ekle</h2>
+    <input type="text" id="isim" placeholder="İsim" />
+    <input type="text" id="tc" placeholder="TC Kimlik No" maxlength="11" />
+    <input type="text" id="telefon" placeholder="Telefon" />
+    <textarea id="neden" placeholder="Neden kara listeye alındı?"></textarea>
+    <button onclick="ekle()">Ekle</button>
+    <p id="sonuc"></p>
 
-  <table>
-    <thead>
-      <tr>
-        <th onclick="sortBy('ad_soyad')">Ad Soyad</th>
-        <th onclick="sortBy('tc_kimlik')">TC Kimlik</th>
-        <th onclick="sortBy('aciklama')">Açıklama</th>
-      </tr>
-    </thead>
-    <tbody id="liste"></tbody>
-  </table>
+    <h2>Liste</h2>
+    <input
+      type="text"
+      id="arama"
+      placeholder="İsim, TC veya neden ara..."
+      onkeyup="filtrele()"
+    />
+    <table id="listeTablosu">
+      <thead>
+        <tr>
+          <th>İsim</th>
+          <th>TC</th>
+          <th>Telefon</th>
+          <th>Neden</th>
+          <th>Sil</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <h2>📜 Silinen Kayıtlar (Geçmiş)</h2>
+    <table id="gecmisTablosu">
+      <thead>
+        <tr>
+          <th>İsim</th>
+          <th>TC</th>
+          <th>Telefon</th>
+          <th>Neden</th>
+          <th>Silme Nedeni</th>
+          <th>Tarih</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
   <script>
-    // 🚨 BURAYI KENDİ BİLGİLERİNLE DOLDUR
-    const supabase = supabase.createClient(
-      'https://SENIN-PROJE.supabase.co', 
-      'SENIN-ANON-KEY'
+    const sifreDogru = "12345";
+
+    function kontrolEt() {
+      const girilen = document.getElementById("sifre").value;
+      if (girilen === sifreDogru) {
+        localStorage.setItem("giris_onay", Date.now());
+        setTimeout(() => {
+          document.getElementById("giris").style.display = "none";
+          document.getElementById("ana-icerik").style.display = "block";
+          listele();
+          gecmisiYukle();
+        }, 100);
+      } else {
+        document.getElementById("uyari").innerText = "❌ Hatalı şifre!";
+      }
+    }
+
+    window.onload = function () {
+      setTimeout(() => {
+        const girisOnay = localStorage.getItem("giris_onay");
+        if (girisOnay && Date.now() - parseInt(girisOnay) < 3600000) {
+          document.getElementById("giris").style.display = "none";
+          document.getElementById("ana-icerik").style.display = "block";
+          listele();
+          gecmisiYukle();
+        }
+      }, 200);
+    };
+
+    const supabase = window.supabase.createClient(
+      "https://agfeuszcreycpandzfij.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFnZmV1c3pjcmV5Y3BhbmR6ZmlqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTA2MjA3NDYsImV4cCI6MjA2NjE5Njc0Nn0.ap9UUJfPECk0Xysn53q8WIBaH1QDKMPrGTCrGzfEn_s"
     );
 
-    let allEntries = [];
-    let currentSort = { column: null, ascending: true };
+    let kisiler = [];
+    let gecmisKisiler = [];
 
-    async function fetchEntries() {
-      const { data, error } = await supabase.from('kara_liste').select('*');
-      if (error) {
-        alert('Veri alınamadı: ' + error.message);
+    async function ekle() {
+      const isim = document.getElementById("isim").value.trim();
+      const tc = document.getElementById("tc").value.trim();
+      const telefon = document.getElementById("telefon").value.trim();
+      const neden = document.getElementById("neden").value.trim();
+
+      if (!isim || !tc || !neden) {
+        document.getElementById("sonuc").innerText = "İsim, TC ve neden zorunludur.";
         return;
       }
-      allEntries = data;
-      renderList(allEntries);
+
+      if (tc.length !== 11 || isNaN(tc)) {
+        document.getElementById("sonuc").innerText =
+          "TC Kimlik No 11 haneli olmalı.";
+        return;
+      }
+
+      const { data: mevcut } = await supabase
+        .from("blacklist")
+        .select("id")
+        .eq("tc", tc);
+      if (mevcut.length > 0) {
+        document.getElementById("sonuc").innerText = "⚠️ Bu TC zaten kayıtlı.";
+        return;
+      }
+
+      const { error } = await supabase
+        .from("blacklist")
+        .insert([{ isim, tc, telefon, neden }]);
+      if (error) {
+        document.getElementById("sonuc").innerText = "Hata: " + error.message;
+      } else {
+        document.getElementById("sonuc").innerText = "✅ Kayıt eklendi.";
+        document.getElementById("isim").value = "";
+        document.getElementById("tc").value = "";
+        document.getElementById("telefon").value = "";
+        document.getElementById("neden").value = "";
+        listele();
+        gecmisiYukle();
+      }
     }
 
-    function renderList(data) {
-      const tbody = document.getElementById('liste');
+    async function listele() {
+      const { data } = await supabase.from("blacklist").select("*");
+      kisiler = data || [];
+      tabloyuYaz(kisiler);
+    }
+
+    async function gecmisiYukle() {
+      const { data } = await supabase.from("silinenler").select("*");
+      gecmisKisiler = data || [];
+      gecmisTabloYaz(gecmisKisiler);
+    }
+
+    function tabloyuYaz(liste) {
+      const tbody = document.querySelector("#listeTablosu tbody");
       tbody.innerHTML = "";
-
-      data.forEach(item => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${item.ad_soyad}</td>
-          <td>${item.tc_kimlik}</td>
-          <td>${item.aciklama || ''}</td>
+      liste.forEach((kisi) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${kisi.isim}</td>
+          <td>${kisi.tc}</td>
+          <td>${kisi.telefon}</td>
+          <td>${kisi.neden}</td>
+          <td><button class="sil-btn" onclick="sil('${kisi.id}', '${kisi.isim}', '${kisi.tc}', '${kisi.telefon}', '${kisi.neden}')">Sil</button></td>
         `;
-        tbody.appendChild(row);
+        tbody.appendChild(tr);
       });
     }
 
-    function sortBy(column) {
-      currentSort.ascending = (currentSort.column === column) ? !currentSort.ascending : true;
-      currentSort.column = column;
-
-      const sorted = [...allEntries].sort((a, b) => {
-        const valA = a[column]?.toLowerCase?.() || '';
-        const valB = b[column]?.toLowerCase?.() || '';
-        if (valA < valB) return currentSort.ascending ? -1 : 1;
-        if (valA > valB) return currentSort.ascending ? 1 : -1;
-        return 0;
+    function gecmisTabloYaz(liste) {
+      const tbody = document.querySelector("#gecmisTablosu tbody");
+      tbody.innerHTML = "";
+      liste.forEach((kisi) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${kisi.isim}</td>
+          <td>${kisi.tc}</td>
+          <td>${kisi.telefon}</td>
+          <td>${kisi.neden}</td>
+          <td>${kisi.silinme_nedeni}</td>
+          <td>${new Date(kisi.silinme_tarihi).toLocaleString()}</td>
+        `;
+        tbody.appendChild(tr);
       });
-
-      renderList(sorted);
     }
 
-    document.getElementById('searchBox').addEventListener('input', function () {
-      const searchValue = this.value.trim();
-      const filtered = allEntries.filter(entry =>
-        entry.tc_kimlik?.includes(searchValue)
+    async function sil(id, isim, tc, telefon, neden) {
+      const silmeNedeni = prompt("Bu kişiyi neden siliyorsun?");
+      if (!silmeNedeni || silmeNedeni.trim() === "") {
+        alert("Açıklama zorunludur.");
+        return;
+      }
+      await supabase
+        .from("silinenler")
+        .insert([{ isim, tc, telefon, neden, silinme_nedeni: silmeNedeni }]);
+      await supabase.from("blacklist").delete().eq("id", id);
+      listele();
+      gecmisiYukle();
+    }
+
+    function filtrele() {
+      const arama = document.getElementById("arama").value.toLowerCase();
+      const filtreli = kisiler.filter(
+        (k) =>
+          k.isim.toLowerCase().includes(arama) ||
+          k.tc.includes(arama) ||
+          k.neden.toLowerCase().includes(arama)
       );
-      renderList(filtered);
-    });
-
-    fetchEntries();
+      tabloyuYaz(filtreli);
+    }
   </script>
 </body>
 </html>
