--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       placeholder="İsim, TC veya neden ara..."
       onkeyup="filtrele()"
     />
+    <button onclick="filtrele()">Ara</button>
     <table id="listeTablosu">
       <thead>
         <tr>
